// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalysisSection render 1`] = `
<div>
  <div
    class="analysis-section-root"
  >
    <div
      class="section-header"
    >
      Analyze
    </div>
    <div
      class="analysis-list"
    >
      <button
        class="button-root btn btn-primary"
        type="button"
      >
        <svg
          class="icon-root lexicon-icon lexicon-icon-plus"
          viewBox=""
        >
          <use
            xlink:href="/o/osb-faro-web/dist/sprite.svg#plus"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`AnalysisSection render with event 1`] = `
<div>
  <div
    class="analysis-section-root"
  >
    <div
      class="section-header"
    >
      Analyze
    </div>
    <div
      class="analysis-list"
    >
      <div
        class="chip-root d-flex align-items-center justify-content-between analysis-chip-root"
      >
        <div
          class="event-name"
        >
          View Article
        </div>
        <button
          class="button-root btn btn-unstyled remove-button"
          type="button"
        >
          <svg
            class="icon-root lexicon-icon lexicon-icon-times-circle"
            viewBox=""
          >
            <use
              xlink:href="/o/osb-faro-web/dist/sprite.svg#times-circle"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
